--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+  "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
   <meta charset = "windows-1252">
@@ -15,7 +17,7 @@
   <link href="layout/scripts/owlcarousel2/docs/assets/owlcarousel/assets/owl.theme.default.min.css" rel="stylesheet">
 
   <!-- Google Analytics Global Site Tag -->
-  
+
 </head>
 <body>
   <p>Hello World!</p>
