--- a/index.html
+++ b/index.html
@@ -1,25 +1,44 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-  "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset = "windows-1252">
-  <!--
-  <link rel = "icon" href = "images/favicon16x16.png"
-  -->
-  <title>Zhong Quan's Website</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="description" content="Introducing myself as me, Zhong Quan, a final year Economics and Business Analytics undergraduate">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="src/style.css">
 
-  <!-- Main CSS Sheet -->
-  <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
-
-  <!-- Import js -->
-  <link href="layout/scripts/owlcarousel2/docs/assets/owlcarousel/assets/owl.theme.default.min.css" rel="stylesheet">
-
-  <!-- Google Analytics Global Site Tag -->
-
+    <title>Zhong Quan's Portfolio</title>
 </head>
+
 <body>
-  <p>Hello World!</p>
+    <!--Intro Splash SCreen -->
+    <div class="intro">
+        <h1 class="intro-welcome">
+            <span class="welcome">Hi</span>
+            <br>
+            <span class="welcome">I am Zhong Quan.</span>
+            <br><br>
+            <span class="welcome">Welcome</span>
+            <br>
+            <span class="welcome">to my portfolio.</span>
+        </h1>
+    </div>
+
+    <!-- <div class="line-container">
+        <svg viewBox="0 0 252 1655" fill="none" preserveAspectRatio="xMidYMax meet">
+            <path d=""></path>
+        </svg>
+    </div> -->
+
+    <section class="section-one">
+        <h1 class="scroll" data-rate=".4" data-direction="vertical">I am</h1>
+    </section>
+
+    <section class="section-two">
+        <h1 class="scroll" data-rate=".2" data-direction="vertical">Description</h1>
+        <p>data science</p>
+    </section>
+
+    <script src="src/script.js"></script>
 </body>
 </html>
