Added hamburger menu

--- a/index.html
+++ b/index.html
@@ -24,21 +24,47 @@
         </h1>
     </div>
 
-    <!-- <div class="line-container">
-        <svg viewBox="0 0 252 1655" fill="none" preserveAspectRatio="xMidYMax meet">
-            <path d=""></path>
-        </svg>
-    </div> -->
 
-    <section class="section-one">
-        <h1 class="scroll" data-rate=".4" data-direction="vertical">I am</h1>
-    </section>
+    <!-- Off screen sidebar -->
+    <input type="checkbox" id="hamButton" />
+    <label for="hamButton" class="ham-button-label">
+        <div class="ham-bar"></div>
+        <div class="ham-bar"></div>
+        <div class="ham-bar"></div>
+        <div class="ham-bar"></div>
+    </label>
+    <div class="off-screen-container">
+        <div class="rela-block side-block"><p class="abs-cent-text">Home</p></div>
+        <div class="rela-block side-block"><p class="abs-cent-text">Skills & Education</p></div>
+        <div class="rela-block side-block"><p class="abs-cent-text">Projects</p></div>
+        <div class="rela-block side-block"><p class="abs-cent-text">Contact Me</p></div>
+    </div>
 
-    <section class="section-two">
-        <h1 class="scroll" data-rate=".2" data-direction="vertical">Description</h1>
-        <p>data science</p>
-    </section>
+    <div class="page-container">
+        <!-- <div class="line-container">
+            <svg viewBox="0 0 252 1655" fill="none" preserveAspectRatio="xMidYMax meet">
+                <path d=""></path>
+            </svg>
+        </div> -->
 
+        <section class="rela-block section-one">
+            <h1 class="scroll" data-rate=".4" data-direction="vertical">I am</h1>
+        </section>
+
+        <section class="rela-block section-two">
+            <h1 class="scroll" data-rate=".2" data-direction="vertical">Section 2</h1>
+            <p>data science</p>
+        </section>
+
+        <section class="rela-block section-three">
+            <h1 class="scroll" data-rate=".2" data-direction="vertical">Section 3</h1>
+            <p>data science</p>
+        </section>
+        <section class="rela-block section-four">
+            <h1 class="scroll" data-rate=".2" data-direction="vertical">Section 4</h1>
+            <p>data science</p>
+        </section>
+    </div>
     <script src="src/script.js"></script>
 </body>
 </html>
