Updated "Contact Me" section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="src/style.css"/>
+
+    <script src="https://kit.fontawesome.com/2795e22a32.js" crossorigin="anonymous"></script>
 
     <title>Zhong Quan's Portfolio</title>
 </head>
@@ -46,7 +47,6 @@
                 <path d=""></path>
             </svg>
         </div> -->
-
         <section class="rela-block section-one">
             <h1 class="scroll" data-rate=".4" data-direction="vertical">I am</h1>
         </section>
@@ -60,11 +60,59 @@
             <h1 class="scroll" data-rate=".2" data-direction="vertical">Section 3</h1>
             <p>data science</p>
         </section>
+
         <section class="rela-block section-four">
-            <h1 class="scroll" data-rate=".2" data-direction="vertical">Section 4</h1>
+            <h1 class="scroll" data-rate=".2" data-direction="vertical">Contact Me</h1>
             <p>data science</p>
+            <!-- Iphone -->
+            <div id="iphone-wrapper">
+                <div id="iphone">
+                    <div id="shadow"></div>
+                    <div id="side"></div>
+                    <div id="lines"><div><div><div></div></div></div><div><div><div></div></div></div></div>
+                    <div id="toggler"><div></div></div>
+                    <div id="aux"></div>
+                    <div id="lightning"></div>
+                    <div id="bottom-speaker"><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+                    <div id="skrews"><div></div><div></div></div>
+                    <div id="volume"><div></div><div></div></div>
+                    <div id="front">
+                        <div id="front-cover"></div>
+                        <div id="camera"><div></div></div>
+                        <div id="speaker"></div>
+                        <div id="screen">
+                            <div id="reminder">
+                                <div></div>
+                                <div>
+                                    <a href="https://github.com/cheezq">
+                                        <i class="fa-brands fa-github-square"></i> Github: Review Projects
+                                    </a>
+                                </div><br>
+                                <div>
+                                    <a href="https://www.linkedin.com/in/cheezhongquan/">
+                                        <i class="fa-brands fa-linkedin"></i> Linkedin: Connect with me
+                                    </a>
+                                </div>
+                                <div></div>
+                            </div>
+                            <div id="circle"></div>
+                            <div id="time">03:14</div>
+                            <div id="date">Friday, March 14</div>
+                            <div id="bottom"></div>
+                            <div id="top"></div>
+                            <div id="slide">slide to unlock</div>
+                            <div id="signal"><div></div><div></div><div></div><div></div><div></div></div>
+                            <div id="battery"><div>69%</div><div><div></div><div></div></div>
+                            </div>
+                        </div>
+                        <div id="home"></div>
+                    </div>
+                </div>
+            </div>
         </section>
+
     </div>
+
     <script src="src/script.js"></script>
 </body>
 </html>
